--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
 
     <!-- Form -->
     <form action="">
-        <fieldset class="border border-solid border-black w-1/2 p-6">
+        <fieldset class="border border-solid border-gray-300 w-1/2 p-6">
             <h2 class="font-bold text-lg mx-5 my-10">
                 Personal Data
             </h2>
