password form added

--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
     </h1>
 
     <!-- Form -->
-    <form action="">
+    <form action="" class="my-10">
         <fieldset class="border border-solid border-gray-300 w-1/2 p-6">
             <h2 class="font-bold text-lg mx-5 my-10">
                 Personal Data
@@ -126,6 +126,44 @@
         </fieldset>
     </form>
 
+    <!-- Password Form -->
+    <form action="" class="my-10">
+        <fieldset class="border border-solid border-gray-300 w-1/2 p-6">
+            <h2 class="font-bold text-lg mx-5 my-10">
+                Password
+            </h2>
+            <!-- Current Password -->
+            <div class="relative flex w-[90%] m-5">
+                <input
+                    class="border rounded border-gray-300 py-2 px-8 relative text-gray-700 w-full"
+                    type="password"
+                    id="current"
+                    name="current"
+                    placeholder="Current Password"
+                />
+            </div>
+            <!-- New Password -->
+            <div class="relative flex w-[90%] m-5">
+                <input
+                    class="border rounded border-gray-300 py-2 px-8 relative text-gray-700 w-full"
+                    type="password"
+                    id="new"
+                    name="new"
+                    placeholder="New Password"
+                />
+            </div>
+            <!-- Confirm New Password -->
+            <div class="relative flex w-[90%] m-5">
+                <input
+                    class="border rounded border-gray-300 py-2 px-8 relative text-gray-700 w-full"
+                    type="password"
+                    id="confirm"
+                    name="confirm"
+                    placeholder="Confirm New Password"
+                />
+            </div>
+        </fieldset>
+    </form>
 
 </body>
 </html>
