--- a/form.html
+++ b/form.html
@@ -162,6 +162,14 @@
                     placeholder="Confirm New Password"
                 />
             </div>
+            <!-- Submit -->
+            <div class="relative w-[90%] m-5">
+                <input
+                    class="bg-black text-white w-full py-3"
+                    type="submit"
+                    value="Change password"
+                />
+            </div>
         </fieldset>
     </form>
 
